# martial_arts_ocr

./: .gitignore  AGENTS.md  README.md  Readme.md  app.py  config.py  database.py  evaluate_image_preprocessing.py  extras-argos.txt  install.sh  master_key.txt  models.py  phase1_test.py  pyproject.toml  qt_smoke_min.py  requirements-lock-core.txt  requirements-lock.txt  requirements-tree.txt  requirements.txt  setup_japanese.py  test_full_page_ocr.py  test_phase1_orientation.py  testjpn.py  verify_jpn.py
data/: README.md
docs/: README.md  dataset-inventory.md  document-output-state-2026-04-28.md  document-result-serialization.md  extraction-architecture-freeze-2026-04-28.md  extraction-quality-rubric.md  extraction-utils-assessment.md  extraction-workbench-plan.md  image-region-detection-tuning.md  image-region-generalization-analysis.md  japanese-ocr-experimental-state-2026-04-28.md  japanese-region-ocr-routing-design.md  layout-model-evaluation-plan.md  local-research-review-workbench-design.md  local-review-workbench-operator-notes.md  macron-candidate-review-operator-guide.md  macron-candidate-review-state-2026-04-28.md  macron-candidate-review-workflow-design.md  macron-candidate-workflow-state-2026-04-28.md  macron-normalization-candidate-design.md  modern-japanese-ocr-corpus-plan.md  ocr-aware-image-region-filtering.md  ocr-output-state-2026-04-28.md  ocr-text-normalization-notes.md  ocr-text-quality-assessment.md  orientation-subsystem-inventory.md  review-feedback-to-algorithm-improvement-plan.md  review-mode-extraction-guide.md  workbench-export-v2-design.md
(+526 files in other folders)
